#201 - fix buttons in modals on mobile screens.

--- a/IsrealHiking.Web/common.css
+++ b/IsrealHiking.Web/common.css
@@ -31,6 +31,16 @@ body {
     white-space: nowrap;
 }
 
+.modal-footer .modal-footer-btns {
+    display: inline;
+    white-space: nowrap;
+}
+
+.modal-footer .btn {
+    margin-left: 0 !important;
+    width: 16%;
+}
+
 .cursor-pointer {
     cursor: pointer;
 }
